// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<VisitsStats /> > loads visits when mounted 1`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Group by
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Month
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Week
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Day
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Hour
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 2`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Group by
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Month
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Week
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Day
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Hour
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 3`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Group by
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Month
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Week
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Day
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Hour
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 4`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Group by
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Month
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Week
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Day
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Hour
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 229, 135);"
          />
          <strong>
            Previous period
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 5`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Group by
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Month
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Week
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Day
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Hour
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 229, 135);"
          />
          <strong>
            Previous period
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 6`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Group by
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Month
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Week
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Day
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Hour
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 229, 135);"
          />
          <strong>
            Previous period
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
